<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    <item android:id="@+id/contextual_item1" android:title="@string/ctx_item1">
        <menu>
            <item android:id="@+id/ctx_chk_item1" android:title="@string/ctx_chk1" android:checkable="true"/>
            <item android:id="@+id/ctx_chk_item2" android:title="@string/ctx_chk2" android:checkable="true"/>
            <item android:id="@+id/ctx_chk_item3" android:title="@string/ctx_chk3" android:checkable="true"/>
        </menu>
    </item><item android:id="@+id/contextual_item2" android:title="@string/ctx_item2"></item>
    
    <item android:id="@+id/contextual_item3" android:title="@string/ctx_item3"></item>
    <item android:id="@+id/contextual_item4" android:title="@string/ctx_item4"></item>
    

</menu>